# smg

./: .gitignore  .mailmap  .pre-commit-config.yaml  Cargo.toml  GOVERNANCE.md  HELM_SERVICE_DISCOVERY_ISSUE.md  LICENSE  Makefile  README.md  REVIEW.md  UPSTREAM_SYNC_SOP.md  build.rs  clippy.toml  mcp.local.yaml  mkdocs.yml  mypy.ini  ocibuild.conf  oracle-schema-config.local.yaml  ruff.toml
auth/: Cargo.toml
auth/src/: audit.rs  config.rs  jwks.rs  jwt.rs  middleware.rs
bindings/python/: .coveragerc  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/src/: lib.rs  serving.rs  tokenizer.rs
bindings/python/tests/: conftest.py  test_arg_parser.py  test_router_config.py  test_serve.py  test_serving_skeleton.py  test_startup_sequence.py  test_tokenizer.py  test_validation.py
clients/openapi-gen/: Cargo.toml
clients/openapi-gen/src/: main.rs
clients/python/: pyproject.toml
clients/python/smg_client/: __init__.py  _client.py  _config.py  _errors.py  _helpers.py  _sse.py  (+2 more)
crates/blob_storage/: Cargo.toml
crates/container_backend/: Cargo.toml
crates/extensions/: Cargo.toml
crates/skills/: Cargo.toml
crates/vendor_auth/: Cargo.toml
e2e_test/: conftest.py  pyproject.toml
e2e_test/baselines/: __init__.py  compare.py
e2e_test/benchmarks/: conftest.py  nightly_summarize.py  results.py  summarize.py  test_go_bindings_perf.py  test_kv_event_perf.py  test_nightly_perf.py  test_pd_perf.py  test_regular_perf.py
e2e_test/bfcl/: __init__.py  converter.py  download_data.py  evaluator.py  loader.py  session_state.py
e2e_test/bindings_go/: __init__.py  conftest.py  test_go_oai_server.py
e2e_test/chat_completions/: test_bfcl.py  test_enable_thinking.py  test_epd_multimodal.py  test_function_calling.py  test_generation_config.py  test_mlx_backend.py  test_multimodal.py  test_multimodal_rdma.py  test_multimodal_shm.py  test_openai_server.py  test_reasoning_content.py  test_sampling_defaults.py  test_structured_output.py  test_transcription_tokenspeed.py  test_validation.py  test_worker_logs_on_failure.py
e2e_test/completions/: test_basic.py
e2e_test/embeddings/: test_basic.py  test_correctness.py
e2e_test/fixtures/: __init__.py  hooks.py  markers.py  pool.py  setup_backend.py
e2e_test/infra/: __init__.py  constants.py  gateway.py  gpu_allocator.py  gpu_monitor.py  mock_mcp.py  mock_mcp_server.py  model_pool.py  model_specs.py  process_utils.py  run_eval.py  simple_eval_common.py  simple_eval_mmlu.py  simple_eval_mmmu.py  test_epd_cmd_builders.py  test_worker_teardown.py  worker.py  worker_pool.py
e2e_test/k8s_integration/: Dockerfile.gateway  conftest.py  pyproject.toml  setup.sh  test_multi_selector_discovery.py  test_pd_type_change.py  test_reconciliation.py
e2e_test/messages/: __init__.py  test_basic.py  test_grpc_messages.py  test_mcp_tool.py  test_tool_search.py  test_tool_use.py
e2e_test/mlx/: test_mlx_backend.py
e2e_test/realtime/: test_realtime_local.py  test_realtime_webrtc.py  test_realtime_ws.py
e2e_test/responses/: conftest.py  test_annotations.py  test_background_mode.py  test_basic_crud.py  test_builtin_tools.py  test_code_interpreter.py  test_harmony_logprobs.py  test_image_generation.py  test_image_generation_openai_ground_truth.py  test_logprobs.py  test_sampling_params.py  test_state_management.py  test_storage_hooks.py  test_streaming_events.py  test_structured_output.py  test_tools_call.py  test_validation.py  test_web_search_preview.py
e2e_test/router/: test_mmlu.py  test_mmmu.py  test_pd_mmlu.py  test_vllm_pd_mmlu.py  test_worker_api.py
grpc_servicer/: DEVELOPMENT.md  README.md  manual_validate_encode_grpc_e2e.py  pyproject.toml
grpc_servicer/docker/: vllm-smoke.sh
grpc_servicer/smg_grpc_servicer/: __init__.py  health_watch.py  mm_rdma.py  mm_shm.py  tokenizer_bundle.py
grpc_servicer/tests/: conftest.py  test_field_transforms.py  test_health_servicer.py  test_kv_events.py  test_mm_rdma.py  test_mm_shm.py  test_prefill_bootstrap_queue_stalled.py  test_proto_utils.py  test_render_servicer.py  test_sglang_generate_request_contract.py  test_sglang_health_watch.py  test_sglang_validation.py  test_token_id_array.py  test_tokenspeed_health_servicer.py  test_tokenspeed_kv_events.py  test_tokenspeed_multimodal_shm.py  test_tokenspeed_servicer.py  test_vllm_health_watch.py  test_vllm_kv_events.py  test_vllm_kv_events_stream.py  test_vllm_mm_rdma.py
kv_index/: Cargo.toml
kv_index/benches/: throughput_bench.rs
kv_index/src/: event_tree.rs  lib.rs  sharded_indexer.rs  string_tree.rs  token_tree.rs
metrics_service/: Cargo.toml  README.md
metrics_service/src/: bus.rs  lib.rs  store.rs  types.rs
protocols/: Cargo.toml
protocols/src/: chat.rs  classify.rs  common.rs  completion.rs  embedding.rs  event_types.rs  generate.rs  interactions.rs  lib.rs  lora.rs  messages.rs  model_card.rs  model_type.rs  realtime_conversation.rs  realtime_events.rs  realtime_response.rs  realtime_session.rs  rerank.rs  responses.rs  sampling_params.rs  tokenize.rs  worker.rs  worker_spec.rs
reasoning-parser/: Cargo.toml
reasoning_parser/: Cargo.toml  README.md
reasoning_parser/src/: factory.rs  lib.rs  traits.rs
tokenizer/: Cargo.toml  README.md
tokenizer/benches/: stop_sequence_search.rs
tokenizer/src/: bundle.rs  chat_template.rs  factory.rs  hub.rs  huggingface.rs  lib.rs  mock.rs  registry.rs  sequence.rs  stop.rs  stream.rs  tests.rs  tiktoken.rs  traits.rs  validation.rs
tokenizer/tests/: chat_template_format_detection.rs  chat_template_integration.rs  chat_template_loading.rs  tiktoken_integration.rs  tokenizer_cache_correctness_test.rs  tokenizer_integration.rs
tool-parser/: Cargo.toml
tool-parser/src/: tests.rs
tool-parser/tests/: tool_parser_deepseek.rs  tool_parser_edge_cases.rs  tool_parser_glm47_moe.rs  tool_parser_json.rs  tool_parser_llama.rs  tool_parser_mistral.rs  tool_parser_partial_json.rs  tool_parser_qwen_coder.rs
workflow/: Cargo.toml  README.md
workflow/src/: engine.rs  event.rs  executor.rs  lib.rs  oracle_store.rs  state.rs  types.rs
workflow/tests/: workflow_test.rs
(+1669 files in other folders)
