[workspace]
members = ["model_gateway", "protocols", "reasoning_parser", "tool_parser", "workflow", "tokenizer", "auth", "mcp", "kv_index", "data_connector", "multimodal", "wasm", "mesh", "grpc_client", "bindings/python", "bindings/golang"]
resolver = "2"

[workspace.dependencies]
# Internal workspace crates
openai-protocol = { version = "1.1.0", path = "protocols" }
reasoning-parser = { version = "1.2.0", path = "reasoning_parser" }
tool-parser = { version = "1.1.0", path = "tool_parser" }
wfaas = { version = "1.0.1", path = "workflow" }
llm-tokenizer = { version = "1.1.0", path = "tokenizer" }
smg-auth = { version = "1.1.0", path = "auth" }
smg-mcp = { version = "2.0.0", path = "mcp" }
kv-index = { version = "1.0.0", path = "kv_index" }
smg-data-connector = { version = "2.0.0", path = "data_connector", package = "data-connector" }
llm-multimodal = { version = "1.1.0", path = "multimodal" }
smg-wasm = { version = "1.0.0", path = "wasm", package = "smg-wasm" }
smg-mesh = { version = "1.1.0", path = "mesh", package = "smg-mesh" }
smg-grpc-client = { version = "1.1.0", path = "grpc_client" }

# Shared dependencies
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14.2", features = ["gzip", "transport"] }
tonic-prost = "0.14.2"
axum = { version = "0.8.6" }
blake3 = "1.5"
bytemuck = { version = "1.21" }
chrono = { version = "0.4" }
dashmap = "6.1.0"
http = "1.1.0"
lru = "0.16.2"
num-traits = "0.2"
parking_lot = "0.12.4"
rand = "0.9.2"
reqwest = { version = "0.12.8", default-features = false }
serde = { version = "1.0" }
serde_json = "1.0"
serde_with = { version = "3", features = ["macros"] }
subtle = "2.6"
thiserror = "2.0.12"
tokio = { version = "1.42.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
uuid = { version = "1.10" }
wasmtime = { version = "41.0", features = ["component-model", "async"] }
wasmtime-wasi = "41.0"
tokio-util = { version = "0.7", features = ["rt"] }
scopeguard = "1.2"
bitflags = "2.10.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Deny unwrap in production code (tests exempted via clippy.toml)
unwrap_used = "deny"
# Warn for now — promote to deny after cleanup (99 expect, 82 panic violations)
expect_used = "warn"
panic = "warn"

# Deny debug/placeholder macros (currently zero violations)
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# Print macros — use tracing instead (58 existing violations, warn for now)
print_stdout = "warn"
print_stderr = "warn"

# Enforce #[expect] over #[allow] for better lint tracking (92 existing violations, warn for now)
allow_attributes = "warn"

# Disallowed methods (see clippy.toml for the list) — warn for now, promote after audit
disallowed_methods = "warn"

# Code quality lints — warn initially, promote to deny after cleanup
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
manual_assert = "warn"
manual_string_new = "warn"
inconsistent_struct_constructor = "warn"
needless_raw_string_hashes = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
assigning_clones = "warn"
stable_sort_primitive = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
unused_async = "warn"
if_not_else = "warn"
match_bool = "warn"
match_wildcard_for_single_variants = "warn"
trivially_copy_pass_by_ref = "warn"
or_fun_call = "warn"
ignored_unit_patterns = "warn"
ref_option = "warn"
large_futures = "warn"

# These pedantic lints are explicitly allowed to give authors discretion
default_trait_access = "allow"
match_same_arms = "allow"
must_use_candidate = "allow"
single_match_else = "allow"
doc_lazy_continuation = "allow"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Full LTO for smaller binaries
codegen-units = 1   # Better optimization, slower compile
strip = true        # Strip debug symbols

[profile.ci]
inherits = "release"
opt-level = 2       # Lighter optimization (still fast runtime, much faster compile)
lto = "thin"        # Thin LTO - good balance
codegen-units = 16  # More parallelization for faster builds
strip = true

[profile.dev]
opt-level = 0
debug = 1
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2
debug = false


[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 1
