[project]
name = "smg-e2e-tests"
version = "0.1.0"
description = "E2E tests for Shepherd Model Gateway"
requires-python = ">=3.12"

dependencies = [
  "anthropic",
  "filelock",
  "grpcio",
  "grpcio-health-checking",
  "httpx",
  "openai",
  "pytest",
  "pytest-xdist",
  "pytest-rerunfailures",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
  "e2e: mark test as end-to-end test requiring GPU workers",
  "slow: mark test as slow-running",
  "thread_unsafe: legacy marker, no-op under xdist (separate processes)",
  "external: mark test as dependent on external third-party services (run with -m external)",
]
addopts = "-v"
log_cli = false

# Parallel execution configuration:
# Use -n N --dist loadscope to run N xdist workers.
# Workers share model servers via a file-based state file + FileLock.
#
# Example usage:
#   pytest -n 4 --dist loadscope e2e_test/router/
#
# --dist loadscope groups tests by module/class so that tests sharing
# the same model run on the same worker.
