[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smg-grpc-servicer"
version = "0.5.2"
description = "SMG gRPC servicer implementations for LLM inference engines (vLLM, SGLang)"
requires-python = ">=3.10"
dependencies = [
    "smg-grpc-proto>=0.4.6",
    "grpcio>=1.78.0",
    "grpcio-reflection>=1.78.0",
    "grpcio-health-checking>=1.78.0",
]
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    {name = "Chang Su", email = "mckvtl@gmail.com"},
    {name = "Simo Lin", email = "linsimo.mark@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
vllm = ["vllm>=0.19.0"]
sglang = ["sglang>=0.5.10"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/lightseekorg/smg"
Repository = "https://github.com/lightseekorg/smg"

[tool.setuptools.packages.find]
where = ["."]
include = ["smg_grpc_servicer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
markers = [
    "unit: mark test as a unit test (no GPU or scheduler required)",
]
