[package]
name = "kv_index"
version = "0.1.0"
edition = "2021"
description = "Radix tree implementations for prefix matching and cache-aware routing"

[dependencies]
dashmap = { workspace = true }
once_cell = "1.21.3"
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { workspace = true }
