[package]
name = "smg-python"
version = "1.4.1"
edition = "2021"

[lib]
name = "smg_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1.42.0", features = ["full"] }
once_cell = "1.19"
serde_yaml = "0.9"
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }

[dependencies.smg]
path = "../../model_gateway"
default-features = true

[dependencies.smg-auth]
workspace = true

[dependencies.smg-mesh]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.tool-parser]
workspace = true

[dependencies.reasoning-parser]
workspace = true

[dependencies.llm-tokenizer]
workspace = true

[dependencies.openai-protocol]
workspace = true

[features]
default = ["pyo3/extension-module"]
vendored-openssl = ["smg/vendored-openssl"]

[profile.ci]
inherits = "release"
opt-level = 2       # Lighter optimization (still fast runtime, much faster compile)
lto = "thin"        # Thin LTO - good balance
codegen-units = 16  # More parallelization for faster builds
strip = true

[lints]
workspace = true
