[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smg-client"
version = "0.1.0"
description = "Python client for SMG (Shepherd Model Gateway)"
authors = [
    {name = "Simo Lin", email = "linsimo.mark@gmail.com"},
    {name = "Chang Su", email = "mckvtl@gmail.com"},
    {name = "Keyang Ru", email = "rukeyang@gmail.com"},
]
requires-python = ">=3.10"
readme = "../../README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: mark test as a unit test",
]
