[package]
name = "smg-blob-storage"
version = "0.1.0"
edition = "2021"
description = "Generic blob/object storage contracts for SMG"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["blob", "storage", "s3", "gcs", "azure"]
categories = ["filesystem", "web-programming"]

[lib]
name = "smg_blob_storage"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[lints]
workspace = true
