[package]
name = "smg-extensions"
version = "0.1.0"
edition = "2021"
description = "Generic extension trait and registry for SMG request lifecycle hooks"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["extensions", "interceptor", "gateway"]
categories = ["web-programming", "network-programming"]

[lib]
name = "smg_extensions"

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
openai-protocol.workspace = true
serde_json.workspace = true
smg-data-connector.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
