# Cap grpcio-tools at the 1.81.x line so the protoc it bundles emits protobuf-6
# gencode. grpcio-tools 1.82.x ships a protobuf-7 protoc, which stamps the
# generated *_pb2.py with gencode 7.x. The engine runtimes (and the protobuf-6
# floor that scripts/ci_install_e2e_deps.sh pins grpcio-health-checking /
# grpcio-reflection to) still load a protobuf 6.x runtime, and
# `_runtime_version.ValidateProtobufRuntimeVersion` refuses to load gencode that
# is newer than the runtime:
#   "Detected incompatible Protobuf Gencode/Runtime versions ... gencode 7.x
#    runtime 6.x. Runtime version cannot be older than the linked gencode version."
# The 1.81.x line caps protobuf<7 and emits 6.x gencode, which loads on both a
# 6.x and a 7.x runtime. Drop the cap once the whole stack moves to protobuf 7.
[build-system]
requires = ["setuptools>=77.0", "grpcio-tools>=1.81.1,<1.82"]
build-backend = "setuptools.build_meta"

[project]
name = "smg-grpc-proto"
version = "0.4.12"
description = "SMG gRPC proto definitions for vLLM, TRT-LLM, MLX, TokenSpeed, and SGLang"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.81.1",
    "protobuf>=5.26.0",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Chang Su", email = "mckvtl@gmail.com"},
    {name = "Simo Lin", email = "linsimo.mark@gmail.com"},
    {name = "Keyang Ru", email = "rukeyang@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lightseekorg/smg"
Repository = "https://github.com/lightseekorg/smg"

[tool.setuptools.packages.find]
where = ["."]
include = ["smg_grpc_proto*"]

[tool.setuptools.package-data]
smg_grpc_proto = ["proto/*.proto", "generated/*.py", "generated/*.pyi"]
